--- a/fundamentos-react/src/Global.css
+++ b/fundamentos-react/src/Global.css
@@ -4,10 +4,12 @@
     --gray-300: #c4c3cc;
     --gray-400: #8d8d99;
     --gray-500: #29292e;
+    --gray-700: #29292e;
     --gray-800: #202024;
     --gray-900: #121214;
     --green-500: #00875f;
     --green-300: #1c684c;
+    --red-500: #ea4335;
 }
 
 :focus{
