--- a/fundamentos-react/src/components/Sidebar.module.css
+++ b/fundamentos-react/src/components/Sidebar.module.css
@@ -18,16 +18,12 @@
 
     margin-top: -2rem;
 }
+.profile strong{
+    
+    margin-top: 0.5rem;
+}
 
-.avatar{
-    box-sizing: initial;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 4px;
-    border: 4px solid var(--gray-800);
-    overflow: hidden;
-    outline: 2px solid var(--green-500);
- }
+
 
 .sidebar footer{
     border-top: 1px solid var(--gray-500);
