--- a/fundamentos-react/src/components/Post.module.css
+++ b/fundamentos-react/src/components/Post.module.css
@@ -1,122 +1,117 @@
-.post{
-    background: var(--gray-800);
-    border-radius: 0.5rem;
-    padding: 2.5rem;
+.post {
+  background: var(--gray-800);
+  border-radius: 0.5rem;
+  padding: 2.5rem;
 }
 
-.post + .post{
-    margin-top: 2rem;
+.post + .post {
+  margin-top: 2rem;
 }
 
-.content{
- line-height: 1.6rem;
-    color: var(--gray-300);
-    margin-top: 1.5rem;
-
+.content {
+  line-height: 1.6rem;
+  color: var(--gray-300);
+  margin-top: 1.5rem;
 }
 
-.content p{
-    margin: 1rem;
-
+.content p {
+  margin: 1rem;
 }
 
-.content a{
-    font-weight: bold;
-    color: var(--green-500);
-    text-decoration: none;
+.content a {
+  font-weight: bold;
+  color: var(--green-500);
+  text-decoration: none;
 }
 
-.content a:hover{
-    color: var(--green-300);
+.content a:hover {
+  color: var(--green-300);
 }
 
-.post > header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.post > header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.post > header time{
-    font-size: 0.875rem;
-    color: var(--gray-400);
+.post > header time {
+  font-size: 0.875rem;
+  color: var(--gray-400);
 }
 
-.author{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.author {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.authorInfo strong{
-display: block; 
-color: var(--gray-100);
-line-height: 1.6;
+.authorInfo strong {
+  display: block;
+  color: var(--gray-100);
+  line-height: 1.6;
 }
 
-.authorInfo span{
-    display: block;
-    font-size: 0.875rem;
-    color: var(--gray-400);
-    line-height: 1.6;
+.authorInfo span {
+  display: block;
+  font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
 }
 
-
-.commentForm{
-    width: 100%;
-    margin-top: 1.5rem;
-    padding-top: 1.5rem;
-    border-top: 1px solid var(--gray-600);
+.commentForm {
+  width: 100%;
+  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--gray-600);
 }
-.commentForm > strong{
-    line-height: 1.6;
-    color: var(--gray-100);
-
+.commentForm > strong {
+  line-height: 1.6;
+  color: var(--gray-100);
 }
 
-.commentForm > textarea{
-    width: 100%;
-    background-color: var(--gray-900);
-    border: 0;
-    resize: none;
-    height: 6rem;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    color:var(--gray-100);
-    line-height: 1.4;
-    margin-top: 1rem;
+.commentForm > textarea {
+  width: 100%;
+  background-color: var(--gray-900);
+  border: 0;
+  resize: none;
+  height: 6rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  color: var(--gray-100);
+  line-height: 1.4;
+  margin-top: 1rem;
 }
 
-
-.commentForm footer{
-    visibility: hidden;
-    max-height: 0;
+.commentForm footer {
+  visibility: hidden;
+  max-height: 0;
 }
 
-.commentForm:focus-within footer{
-    visibility: visible;
-    max-height: none;
-
+.commentForm:focus-within footer {
+  visibility: visible;
+  max-height: none;
 }
 
-.commentForm button[type=submit]{
-
-    background-color: var(--green-500);
-    margin-top: 1rem;
-    color: var(--white);
-    border-radius: 0.5rem;
-    border: 0;
-    background: var(--green-500);
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    padding: 1rem 1.5rem;
-
-
+.commentForm button[type="submit"] {
+  background-color: var(--green-500);
+  margin-top: 1rem;
+  color: var(--white);
+  border-radius: 0.5rem;
+  border: 0;
+  background: var(--green-500);
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 1rem 1.5rem;
+}
+.commentForm button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 
-.commentForm button[type=submit]:hover{
-background: var(--green-300);
+.commentForm button[type="submit"]:hover {
+  background: var(--green-300);
 }
-.commentList{
-    margin-top: 2rem;
+.commentList {
+  margin-top: 2rem;
 }
